--- a/resources/templates/languageAndLexicalCategoryWidget.vue.html
+++ b/resources/templates/languageAndLexicalCategoryWidget.vue.html
@@ -1,30 +1,22 @@
 <div class="language-lexical-category-widget">
 	<div v-if="!inEditMode">
 		<div>
-			<span>
-				{{message('wikibaselexeme-field-language-label')}}
-			</span> <span class="language-lexical-category-widget_language" v-html="formattedLanguage"></span>
+			<span>{{message('wikibaselexeme-field-language-label')}}</span>{{message('colon-separator')}}<span class="language-lexical-category-widget_language" v-html="formattedLanguage"></span>
 		</div>
 		<div>
-			<span>
-				{{message('wikibaselexeme-field-lexical-category-label')}}
-			</span> <span class="language-lexical-category-widget_lexical-category" v-html="formattedLexicalCategory"></span>
+			<span>{{message('wikibaselexeme-field-lexical-category-label')}}</span>{{message('colon-separator')}}<span class="language-lexical-category-widget_lexical-category" v-html="formattedLexicalCategory"></span>
 		</div>
 	</div>
 	<div v-else>
 		<div>
-			<label for="lexeme-language">
-				{{message('wikibaselexeme-field-language-label')}}
-			</label> <item-selector
+			<label for="lexeme-language">{{message('wikibaselexeme-field-language-label')}}</label>{{message('colon-separator')}}<item-selector
 				id="lexeme-language"
 				v-bind:value="language"
 				@input="$emit('update:language', $event)">
 			</item-selector>
 		</div>
 		<div>
-			<label for="lexeme-lexical-category">
-				{{message('wikibaselexeme-field-lexical-category-label')}}
-			</label> <item-selector
+			<label for="lexeme-lexical-category">{{message('wikibaselexeme-field-lexical-category-label')}}</label>{{message('colon-separator')}}<item-selector
 				id="lexeme-lexical-category"
 				v-bind:value="lexicalCategory"
 				@input="$emit('update:lexicalCategory', $event)">
